⚙️ Attempts to fix chunk loading